--- a/src/www/index.html
+++ b/src/www/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Hello world</h1>
     <p>This is a paragraph</p>
-    
+    <div style="background-color: aquamarine;width: 10%;">This is a new div</div>
 </body>
 </html>
